Protect Sage data and handle common input errors
Malformed commands and failed saves can confuse users or discard data.
Validate exact command names, time fields, dates, duplicates, and limits.
Preserve legacy records while safely escaping newly saved text.

Write complete temporary files before replacement, block saves after a
failed load, and restore in-memory state when persistence fails. Keep
search result numbers consistent with subsequent mutation commands.

Add regression tests and a portable, isolated CLI acceptance runner so
these guarantees can be checked without touching personal task data.